# Collapsi

./: .gitignore  CPP_PLAN.md  Dockerfile  README.md  app.py  apt.txt  game.py  render.yaml  requirements.txt  test_game.py
cpp/: CMakeLists.txt
cpp/build-deploy/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  collapsi_core.vcxproj  collapsi_core.vcxproj.filters  collapsi_cpp.sln  collapsi_cpp.vcxproj  collapsi_cpp.vcxproj.filters
cpp/build-deploy/Release/: collapsi_core.lib
cpp/data/norm2raw/: 00aa81096a0da504-0.txt  021ac2d306ccb381-0.txt  02ab58125dd3606a-0.txt  050754290deae5d9-1.txt  065f796a8221156e-1.txt  07126c418a8ddff1-1.txt  0acb0d589183754a-1.txt  0c333d28095dae93-0.txt  0d5f8c26b47d0c17-0.txt  0df1da62f47be033-0.txt  0f6eb9c2d4f9f184-0.txt  1020d8d03ee109af-0.txt  10a9bb3846173ce0-0.txt  12392e2dbdabe13f-1.txt  123a62fd76e94464-1.txt  13209e4b1090394d-0.txt  138d60b224dbcbb8-0.txt  14dd9dc240c0f7f4-0.txt  160ae77e10630401-0.txt  18351c4570900735-1.txt  194c39718c3e7291-1.txt  19d1e1c08f7c5ae5-1.txt  1c3ab44ca0c18657-1.txt  1cd2d85cd5df641c-1.txt  1db8318ea401fda4-1.txt  228432dae6572d22-1.txt  23a625c42abf72f0-1.txt  24c50eb21eaeb5db-0.txt  24d0d89dac05c75c-0.txt  250a5ee32d7a1dad-1.txt  26ac43b2681d4b6d-1.txt  2703ad7455d6e511-1.txt  288e720e3add3bb1-0.txt  2a6dbda32306db6d-1.txt  (+166 more)
cpp/include/: bitboard.hpp  hash.hpp  solver.hpp
cpp/src/: bitboard.cpp  cli.cpp  gen_index.cpp  gen_positions.cpp  hash.cpp  list_derivations.cpp  solve_norm_db.cpp  solver.cpp
(+265 files in other folders)
